Added NOMS2012 PhD dissertation and updated bib file

--- a/maggicc/data/publications.bib
+++ b/maggicc/data/publications.bib
@@ -101,7 +101,7 @@
   Title =        {Integrated Detection of Anomalous Behavior of
                   Computer Infrastructures},
   Venue =        {Maui, Hawaii, US},
-  Volume =       {(to appear)},
+  Pages =        {866--871},
   Year =         2012
 }
 
