Added ACSAC 2012 accepted papers.

--- a/maggicc/data/publications.bib
+++ b/maggicc/data/publications.bib
@@ -1,3 +1,31 @@
+@InProceedings{2012_polakis_lancini_kontaxis_maggi_ioannidis_keromytis_zanero_face,
+  author =       {Jason Polakis and Marco Lancini and Georgios
+                  Kontaxis and Federico Maggi and Sotiris Ioannidis
+                  and Angelos Keromytis and Stefano Zanero},
+  title =        {All Your Faces Are Belong to Us: Breaking Facebook's
+                  Social Authentication},
+  booktitle =    {Proceedings of the Annual Computer Security
+                  Applications Conference (ACSAC)},
+  year =         2012,
+  volume =       {(to appear)},
+  month =        {December},
+  venue =        {Orlando, Florida, US},
+}
+
+@InProceedings{2012_lindorfer_difederico_maggi_comparetti_zanero_beagle,
+  author =       {Lines of Malicious Code: Insights Into the Malicious
+                  Software Industry},
+  title =        {Martina Lindorfer and Alessandro Di Federico and
+                  Federico Maggi and Paolo Milani Comparetti and
+                  Stefano Zanero},
+  booktitle =    {Proceedings of the Annual Computer Security
+                  Applications Conference (ACSAC)},
+  year =         2012,
+  volume =       {(to appear)},
+  month =        {December},
+  venue =        {Orlando, Florida, US},
+}
+
 @TechReport{2012_kochanek_dardanelli_maggi_zanero_tanelli_savaresi_holz_autosec_tr,
   author =       {Roman Kochanek and Andrea Dardanelli and Federico
                   Maggi and Stefano Zanero and Mara Tanelli and Sergio
@@ -47,7 +75,8 @@
 @inproceedings{2010_volpatto_maggi_zanero_agentids,
   Author =       {Volpatto, Alberto and Maggi, Federico and Zanero,
                   Stefano},
-  Booktitle =    {Decision and Game Theory for Security},
+  Booktitle =    {Proceedings of the Decision and Game Theory for
+                  Security (GameSec)},
   Date =         {2010-11-22},
   Date-Added =   {2012-01-17 13:21:20 +0000},
   Date-Modified ={2012-06-24 08:50:05 +0000},
