Fixed bibtex typo.

--- a/maggicc/data/publications.bib
+++ b/maggicc/data/publications.bib
@@ -13,9 +13,9 @@
 }
 
 @InProceedings{2012_lindorfer_difederico_maggi_comparetti_zanero_beagle,
-  author =       {Lines of Malicious Code: Insights Into the Malicious
+  title =       {Lines of Malicious Code: Insights Into the Malicious
                   Software Industry},
-  title =        {Martina Lindorfer and Alessandro Di Federico and
+  author =        {Martina Lindorfer and Alessandro Di Federico and
                   Federico Maggi and Paolo Milani Comparetti and
                   Stefano Zanero},
   booktitle =    {Proceedings of the Annual Computer Security
