Fixed some bib missing entries

--- a/maggicc/data/publications.bib
+++ b/maggicc/data/publications.bib
@@ -36,6 +36,7 @@
   year =         2012,
   number =       {2012-09},
   month =        {June},
+  url =          {http://maggi.cc/static/assets/publications/2012_kochanek_dardanelli_maggi_zanero_tanelli_savaresi_holz_autosec_tr/paper.pdf}
   abstract =     {Modern vehicles, and in particular electric
                   vehicles, are increasingly being equipped with
                   interconnected computer systems, which collect
@@ -131,7 +132,8 @@
                   Computer Infrastructures},
   Venue =        {Maui, Hawaii, US},
   Pages =        {866--871},
-  Year =         2012
+  Year =         2012,
+  doi={10.1109/NOMS.2012.6212001}
 }
 
 @inproceedings{2011_maggi_bellini_salvaneschi_zanero_avnaming,
@@ -259,7 +261,9 @@
   Publisher =    {ACM},
   Title =        {POSTER: Fast, Automatic iPhone Shoulder Surfing},
   Venue =        {Chicago, IL, US},
-  Year =         2011
+  Year =         2011,
+  doi =          {10.1145/2093476.2093498},
+  url = {http://doi.acm.org/10.1145/2093476.2093498},
 }
 
 @techreport{2010_maggi_volpatto_gasparini_boracchi_zanero_clearshot_tr,
@@ -365,7 +369,9 @@
   Publisher =    {IEEE Computer Society},
   Title =        {System Security research at Politecnico di Milano},
   Venue =        {Amsterdam, The Netherlands},
-  Year =         2011
+  Year =         2011,
+  keywords =     {workshop},
+  doi =          {10.1109/SysSec.2011.30}
 }
 
 @inproceedings{2011_roveta_dimario_maggi_caviglia_zanero_ciuccarelli_burn,
@@ -951,6 +957,7 @@
   Number =       {TR-2008-22},
   Title =        {A Survey of Probabilistic Record Matching Models,
                   Techniques and Tools},
+  url =          {http://maggi.cc/static/assets/publications/2008_maggi_record_matching/paper.pdf},
   Year =         2008
 }
 
@@ -975,5 +982,6 @@
   Number =       {TR-2008-23},
   Title =        {Specification and Evaluation of an Efficient
                   Recognizer for Rational Trace Languages},
-  Year =         2008
+  Year =         2008,
+  url =          {http://maggi.cc/static/assets/publications/2008_maggi_traces/paper.pdf}
 }
